# countbattle

./: Cargo.toml  Makefile  README.md  test-all.sh
src/: algorithms.rs  main.rs
