[package]
name = "countbattle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto= "thin"
opt-level = 3
codegen-units = 1


[dependencies]
clap = {version = "4.1", features = ["derive"]}
rand = {version= "0.8", features = ["small_rng"],default-features = false}
